@@ -5,6 +5,7 @@
 * Settings are now shared between Jsus::Middleware and subclasses
 * Middleware now also supports /include/ directive (generates includes file),
   like -g option of CLI utility
+* Hack for cache output paths to be recognizable by nginx
 
 == Version 0.3.1
 * Added wildcard support for Jsus::Middleware
